# rl_diffsim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml  testing.yml
rl_diffsim/: __init__.py
rl_diffsim/bptt/: bptt_agent.py  bptt_agent_deterministic.py  sweep_bptt.py  train_bptt.py  train_bptt_figure8.py  train_bptt_figure8_ft.py  train_bptt_figure8ft.py  train_bptt_figure8rv.py  train_bptt_minibatch.py  train_bptt_race.py  train_bptt_race_lv2.py  train_bptt_rand_traj.py  train_bptt_randtraj.py  train_bptt_randtrajrv.py  train_bptt_reachpos.py  train_bptt_reachposft.py  train_bptt_reachposrv.py  train_bptt_scan_iter.py  train_bptt_scan_iter_obst.py
rl_diffsim/control/: __init__.py  attitude_controller.py  attitude_race.py  attitude_rl.py  attitude_rl_f8.py  attitude_rl_f8_flax.py  attitude_rl_f8_torch.py  attitude_rl_race.py  rotvel_mellinger.py  rotvel_rl_rp.py  state_controller.py
rl_diffsim/envs/: __init__.py  custom_snap_ref_traj_final_v6_2.npy  drone_env.py  drone_env_jittable.py  drone_race.py  drone_race_env.py  figure_8_env.py  figure_8_env_jittable.py  figure_eight_jittable.py  obst_env_jittable.py  race_core.py  race_utils.py  rand_traj.py  rand_traj_env.py  rand_traj_env_jittable.py  rand_traj_state_env.py  reach_pos_env.py  reach_pos_env_jittable.py  real_drone_env.py  real_race_env.py  wrappers.py  wrappers_jittable.py  wrappers_race.py
rl_diffsim/envs/assets/: gate.xml
rl_diffsim/gym_envs/: __init__.py  drone_race.py  figure_8_env.py  race_core.py  rand_traj.py  real_drone_env.py
rl_diffsim/ppo/: agent.py  ppo_agent.py  sweep_ppo.py  sweep_ppo_reachposrv.py  sweep_rl.py  train_ppo.py  train_ppo_figure8.py  train_ppo_figure8ft.py  train_ppo_race.py  train_ppo_race_lv2.py  train_ppo_reachpos.py  train_ppo_reachposrv.py  train_rl.py  train_rl_flax.py  train_rl_flax_scan_rollout.py  train_rl_racing.py  train_rl_torch.py  wrappers.py  wrappers_jittable.py
rl_diffsim/sac/: __init__.py  sac_agent.py  train_sac_figure8.py
rl_diffsim/shac/: shac_agent.py  sweep_shac.py  train_bptt.py  train_bptt_scan_iter.py  train_shac.py  train_shac_figure8.py  train_shac_flax.py  train_shac_race.py  train_shac_race_lv2.py  train_shac_scan_iter.py
rl_diffsim/td3/: sweep_td3_reachposrv.py  td3_agent.py  train_td3_reachposrv.py
saves/: bptt_race_lv2_model.ckpt  bptt_race_model.ckpt  ppo_race_lv2_model.ckpt  ppo_race_model.ckpt  shac_race_lv2_model.ckpt  shac_race_model.ckpt
scripts/: config.toml  config_race.toml  deploy.py  deploy_racing.py  export.py  sim.py  utils.py
tests/integration/: test_env.py  test_training.py
tests/unit/: test_algo.py
